@@ -1,3 +1,8 @@
+2002-06-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* lily/text-spanner.cc: add some props to interface (patch
+	courtesy Chris J).
+
 2002-06-24  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* lily/text-spanner.cc (setup_pedal_bracket): Bugfix: only
